# c_off_heap

./: CMakeLists.txt
execution/filter/: _CONTAINS.c  _ENDS_WITH.c  _EQ.cc  _GE.cc  _GT.cc  _IN_SET.cc  _LE.cc  _LT.cc  _SIMILAR.c  _SIMILAR.h  _START_WITH.c  base_filters.cc  binary_filters.cc  filters.cc  filters.h
execution/jni/: git_wpy_format_vector_OffHeapUtils.c  git_wpy_format_vector_OffHeapUtils.h  jni.h
execution/row/: row.h
execution/utils/: utils.h
execution/vectorized/: column_vector.c  column_vector.h  inline_avx_sum.h
test/: ArrowTest.cc  ArrowTest.h  CMakeLists.txt  test.c  test.cc
vectorized/: column_vector.c  column_vector.h  inline_avx_sum.h
